--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,9 @@ body {
 }
 
 /*nav*/
+.header-nav {
+  display: inline-block;
+}
 
 .site-nav .link-nav {
   color: var(--black-title);
@@ -85,6 +88,7 @@ body {
 }
 
 .contacts {
+  display: inline-block;
   list-style: none;
 }
 
@@ -146,6 +150,7 @@ body {
 
 
 .section-team-title {
+  margin-top: 0;
   color: var(--black-title);
   font-weight: 700;
   font-size: 36px;
@@ -173,6 +178,7 @@ body {
 }
 
 .features-list {
+  margin-top: 0;
   list-style: none;
 }
 
@@ -183,6 +189,7 @@ body {
 }
 
 .skill-title {
+  margin-top: 0;
   margin-bottom: 50px;
   color: var(--black-title);
   font-weight: 700;
@@ -193,6 +200,7 @@ body {
 }
 
 .section-icon {
+  margin-top: 0;
   list-style: none;
 }
 
