Зробив відступи Студії

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ body {
 }
 
 /*nav*/
+
 .header-nav {
   display: inline-block;
 }
@@ -132,9 +133,8 @@ body {
 /*section-features*/
 
 .section-features {
-  background-color: #2196f3;
   padding-top: 94px;
-  padding-bottom: 90px;
+  margin-bottom: 118px;
 }
 
 .visually-hidden {
@@ -151,16 +151,6 @@ body {
   overflow: hidden;
 }
 
-
-.section-team-title {
-  margin-top: 0;
-  color: var(--black-title);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-}
-
 .featurs-title {
   margin-top: 0;
   margin-bottom: 10px;
@@ -174,6 +164,7 @@ body {
 
 .featurs-text {
   margin-top: 10px;
+  margin-bottom: 0;
   color: var(--basic-text);
   line-height: 1.71;
 }
@@ -196,6 +187,7 @@ body {
 
 .skill-title {
   margin-top: 0;
+  margin-bottom: 0;
   padding-bottom: 50px;
   color: var(--black-title);
   font-weight: 700;
@@ -207,12 +199,29 @@ body {
 
 .section-icon {
   margin-top: 0;
+  margin-bottom: 0;
   list-style: none;
 }
 
 /*section-team*/
 
+.section-team {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.section-team-title {
+  margin-top: 0;
+  margin-bottom: 50px;
+  color: var(--black-title);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+
 .title-team {
+  margin-bottom: 10px;
   color: var(--black-title);
   font-weight: 500;
   font-size: 16px;
@@ -220,6 +229,7 @@ body {
 }
 
 .profession {
+  margin-bottom: 0;
   color: var(--basic-text);
   font-size: 16px;
   line-height: 1.19;
@@ -259,7 +269,11 @@ body {
     0px 2px 2px rgba(0, 0, 0, 0.12);
   background-color: #f5f4fa;
   color: var(--black-title);
+  font-weight: 500;
   font-family: inherit;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
   cursor: pointer;
 }
 
@@ -281,16 +295,20 @@ body {
 /*footer*/
 
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background: #2f303a;
 }
 
 .footer-logo {
+  padding-bottom: 20px;
   color: #ffffff;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
   text-decoration: none;
+  display: inline-block;
 }
 
 .address {
@@ -298,12 +316,15 @@ body {
 }
 
 .address-nav {
+  padding-bottom: 9px;
   color: var(--additional-color);
   line-height: 1.71;
   text-decoration: none;
+  display: inline-block;
 }
 
 .address-list {
+  margin-top: 0;
   margin-bottom: 0;
   padding: 0;
   list-style: none;
@@ -315,9 +336,11 @@ body {
 }
 
 .address-contact {
+  padding-bottom: 9px;
   color: var(--secondary-color);
   line-height: 1.71;
   text-decoration: none;
+  display: inline-block;
 }
 
 .address-contact:hover,
