--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ body {
   margin-right: auto;
   width: 1200px;
   padding: 0 15px;
+  border: 2px solid tomato;
 }
 
 /*header*/
@@ -134,7 +135,7 @@ body {
 
 .section-features {
   padding-top: 94px;
-  margin-bottom: 118px;
+  padding-bottom: 118px;
 }
 
 .visually-hidden {
@@ -163,7 +164,7 @@ body {
 }
 
 .featurs-text {
-  margin-top: 10px;
+  margin-top: 0;
   margin-bottom: 0;
   color: var(--basic-text);
   line-height: 1.71;
@@ -242,12 +243,18 @@ body {
 
 /*section-portfolio */
 
+.section-filtr {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .link-filtr {
   display: inline-block;
   text-decoration: none;
 }
 
 .filtr-title {
+  margin-bottom: 4px;
   color: var(--black-title);
   font-weight: 700;
   font-size: 18px;
@@ -256,6 +263,8 @@ body {
 }
 
 .filtr-text {
+  margin-top: 0;
+  margin-bottom: 0;
   color: var(--basic-text);
   font-size: 16px;
   line-height: 1.88;
@@ -284,6 +293,8 @@ body {
 }
 
 .filtr-btns {
+  margin-top: 0;
+  margin-bottom: 34px;
   list-style: none;
 }
 
