--- a/css/styles.css
+++ b/css/styles.css
@@ -29,13 +29,13 @@ body {
   margin-right: auto;
   width: 1200px;
   padding: 0 15px;
-  border: 2px solid tomato;
 }
 
 /*header*/
 
 .logo {
-  display: flex;
+  padding-top: 24px;
+  padding-bottom: 25px;
   color: #000000;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -49,6 +49,10 @@ body {
 }
 
 /*nav*/
+
+.header-nav {
+  display: flex;
+}
 
 .site-nav .link-nav {
   display: block;
@@ -75,6 +79,8 @@ body {
 }
 
 .site-nav {
+  margin-top: 0;
+  margin-bottom: 0;
   display: flex;
   list-style: none;
 }
@@ -104,6 +110,8 @@ body {
 }
 
 .contacts {
+  margin-top: 0;
+  margin-bottom: 0;
   margin-left: auto;
   display: flex;
   list-style: none;
@@ -192,9 +200,16 @@ body {
 }
 
 .features-list {
+  display: flex;
   margin-top: 0;
   margin-bottom: 0;
+  padding-left: 20px;
+  padding-right: 20px;
   list-style: none;
+}
+
+.features-list .list:not(:first-child) {
+  margin-left: 30px;
 }
 
 /*section-skill*/
