--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,11 @@ body {
 
 .section-features {
   padding-top: 94px;
-  padding-bottom: 118px;
+  padding-bottom: 90px;
+}
+
+.list:not(:last-child) {
+  margin-right: 30px;
 }
 
 .visually-hidden {
@@ -208,10 +212,6 @@ body {
   list-style: none;
 }
 
-.features-list .list:not(:first-child) {
-  margin-left: 30px;
-}
-
 /*section-skill*/
 
 .section-skill {
@@ -231,9 +231,16 @@ body {
 }
 
 .section-icon {
+  display: flex;
+  flex-wrap: wrap;
   margin-top: 0;
   margin-bottom: 0;
+  padding-left: 0;
   list-style: none;
+}
+
+.section-icon li:not(:last-child) {
+  margin-right: 30px;
 }
 
 /*section-team*/
@@ -241,6 +248,7 @@ body {
 .section-team {
   padding-top: 94px;
   padding-bottom: 94px;
+  background: #f5f4fa;
 }
 
 .section-team-title {
@@ -254,30 +262,73 @@ body {
 }
 
 .title-team {
+  margin-top: 30px;
   margin-bottom: 10px;
   color: var(--black-title);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
+  text-align: center;
 }
 
 .profession {
-  margin-bottom: 0;
+  margin-bottom: 30px;
   color: var(--basic-text);
   font-size: 16px;
   line-height: 1.19;
+  text-align: center;
+}
+
+.foto {
+  border-radius: 0px;
 }
 
 .list-team {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 0;
   margin-bottom: 0;
+  margin-top: 0;
   list-style: none;
 }
 
-/*section-portfolio */
+.list-team li {
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.list-team li:not(:last-child) {
+  margin-right: 30px;
+}
+
+/* section-filtr */
 
 .section-filtr {
   padding-top: 94px;
   padding-bottom: 94px;
+}
+
+.filtr-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.item {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+}
+
+.item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
 .link-filtr {
@@ -286,6 +337,8 @@ body {
 }
 
 .filtr-title {
+  margin-left: 24px;
+  margin-top: 20px;
   margin-bottom: 4px;
   color: var(--black-title);
   font-weight: 700;
@@ -295,8 +348,9 @@ body {
 }
 
 .filtr-text {
+  margin-left: 24px;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 20px;
   color: var(--basic-text);
   font-size: 16px;
   line-height: 1.88;
@@ -315,6 +369,7 @@ body {
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: 0.03em;
+  text-align: center;
   cursor: pointer;
 }
 
@@ -327,16 +382,20 @@ body {
 .filtr-btns {
   display: flex;
   margin-top: 0;
-  margin-bottom: 34px;
+  margin-bottom: 50px;
+  padding-left: 0;
   list-style: none;
 }
 
-.filtr-btns li:not(last-child) {
+.filtr-btns li:not(:last-child) {
   margin-right: 8px;
 }
 
 .filtr-works {
+  padding-left: 0;
   margin-top: 0;
+  margin-left: 0;
+  margin-bottom: 0;
   list-style: none;
 }
 
