--- a/css/styles.css
+++ b/css/styles.css
@@ -381,6 +381,7 @@ body {
 
 .filtr-btns {
   display: flex;
+  justify-content: center;
   margin-top: 0;
   margin-bottom: 50px;
   padding-left: 0;
