--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,14 @@ body {
 
 /*header*/
 
+.header {
+  border: 1px solid #ECECEC;
+}
+
+.line-shadow {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 .logo {
   padding-top: 24px;
   padding-bottom: 25px;
@@ -134,7 +142,7 @@ body {
   margin-right: auto;
   margin-bottom: 35px;
   background-color: #2f303a;
-  color: #ffffff;
+  color: var(--additional-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -293,7 +301,7 @@ body {
 }
 
 .list-team li {
-  background: #ffffff;
+  background: var(--additional-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -319,7 +327,7 @@ body {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-  background: #ffffff;
+  background: var(--additional-color);
   border: 1px solid #eeeeee;
 }
 
@@ -410,7 +418,7 @@ body {
 
 .footer-logo {
   margin-bottom: 20px;
-  color: #ffffff;
+  color: var(--additional-color);
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
