--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,15 @@ html {
 }
 
 *,
-*::before,
-*::after {
+*::after,
+*::before {
   box-sizing: inherit;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 :root {
@@ -35,10 +41,6 @@ body {
 
 .header {
   border: 1px solid #ececec;
-}
-
-.line-shadow {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .logo {
@@ -83,10 +85,13 @@ body {
   padding-top: 32px;
   padding-bottom: 32px;
   color: var(--accent);
+  font-weight: 500;
   text-decoration: none;
 }
 
 .site-nav {
+  padding-left: 0;
+  margin-left: 93px;
   margin-top: 0;
   margin-bottom: 0;
   display: flex;
@@ -133,6 +138,8 @@ body {
 /*hero*/
 
 .section-hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
   background-color: #2f303a;
   text-align: center;
 }
@@ -164,13 +171,14 @@ body {
   cursor: pointer;
   letter-spacing: 0.06em;
   border-radius: 4px;
+  border: none;
 }
 
 /*section-features*/
 
 .section-features {
   padding-top: 94px;
-  padding-bottom: 90px;
+  padding-bottom: 94px;
 }
 
 .list:not(:last-child) {
@@ -268,11 +276,30 @@ body {
   text-align: center;
 }
 
+.list-team {
+  display: flex;
+  padding-left: 0;
+  margin-bottom: 0;
+  margin-top: 0;
+  list-style: none;
+}
+
+.list:not(:last-child) {
+  margin-right: 30px;
+}
+
+.team-text {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: var(--additional-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
 .title-team {
   margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 30px;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
   color: var(--black-title);
   font-weight: 500;
   font-size: 16px;
@@ -280,39 +307,13 @@ body {
   text-align: center;
 }
 
-.foto {
-  display: block;
-  border-radius: 0px;
-}
-
 .profession {
   margin-top: 0;
   margin-bottom: 0;
-  padding-bottom: 30px;
   color: var(--basic-text);
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
-}
-
-.list-team {
-  display: flex;
-  flex-wrap: wrap;
-  padding-left: 0;
-  margin-bottom: 0;
-  margin-top: 0;
-  list-style: none;
-}
-
-.team-text {
-  background: var(--additional-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-
-.list-team li:not(:last-child) {
-  margin-right: 30px;
 }
 
 /* section-filtr */
@@ -322,14 +323,19 @@ body {
   padding-bottom: 94px;
 }
 
-.filtr-container {
+.filtr-works {
   display: flex;
   flex-wrap: wrap;
+  gap: 30px;
+  padding-left: 0;
+  margin-top: 0;
+  margin-left: 0;
+  margin-bottom: 0;
+  list-style: none;
 }
 
 .item {
-  margin-right: 30px;
-  margin-bottom: 30px;
+  flex-basis: calc((100% - 60px) / 3);
   background: var(--additional-color);
 }
 
@@ -341,26 +347,19 @@ body {
   margin-bottom: 0;
 }
 
-.image {
-  display: block;
-}
-
 .link-filtr {
   display: inline-block;
   text-decoration: none;
 }
-/* border: 1px solid #eeeeee;*/
 
 .filtr-item {
   border: 1px solid #eeeeee;
 }
 
 .filtr-title {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 20px;
-  padding-bottom: 4px;
-  padding-left: 24px;
+  margin-top: 20px;
+  margin-bottom: 4px;
+  margin-left: 24px;
   color: var(--black-title);
   font-weight: 700;
   font-size: 18px;
@@ -370,9 +369,8 @@ body {
 
 .filtr-text {
   margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 24px;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
+  margin-left: 24px;
   color: var(--basic-text);
   font-size: 16px;
   line-height: 1.88;
@@ -381,9 +379,8 @@ body {
 /*button-portfolio*/
 
 .btns {
+  padding: 6px 22px;
   border-radius: 4px;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
   background-color: #f5f4fa;
   color: var(--black-title);
   font-weight: 500;
@@ -393,12 +390,15 @@ body {
   letter-spacing: 0.03em;
   text-align: center;
   cursor: pointer;
+  border: none;
 }
 
 .btns:hover,
 .btns:focus {
   background-color: var(--accent);
   color: var(--additional-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .filtr-btns {
@@ -413,14 +413,6 @@ body {
 
 .filtr-btns li:not(:last-child) {
   margin-right: 8px;
-}
-
-.filtr-works {
-  padding-left: 0;
-  margin-top: 0;
-  margin-left: 0;
-  margin-bottom: 0;
-  list-style: none;
 }
 
 /*footer*/
