--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,7 @@ body {
 }
 
 .hero-title {
+  width: 696px;
   margin-top: 0;
   margin-left: auto;
   margin-right: auto;
@@ -185,6 +186,12 @@ body {
   margin-right: 30px;
 }
 
+.list {
+  list-style: none;
+	padding-left: 0;
+	margin: 0;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -216,16 +223,11 @@ body {
   line-height: 1.71;
 }
 
-.featurs-title {
-  color: var(--black-title);
-}
-
 .features-list {
   display: flex;
   margin-top: 0;
   margin-bottom: 0;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 0;
   list-style: none;
 }
 
