--- a/css/styles.css
+++ b/css/styles.css
@@ -188,8 +188,8 @@ body {
 
 .list {
   list-style: none;
-	padding-left: 0;
-	margin: 0;
+  padding-left: 0;
+  margin: 0;
 }
 
 .visually-hidden {
@@ -286,6 +286,12 @@ body {
   list-style: none;
 }
 
+.list {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
 .list:not(:last-child) {
   margin-right: 30px;
 }
@@ -294,8 +300,6 @@ body {
   padding-top: 30px;
   padding-bottom: 30px;
   background: var(--additional-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
