--- a/css/styles.css
+++ b/css/styles.css
@@ -168,8 +168,9 @@ body {
 }
 
 .hero-btn {
-  padding: 10px 32px;
+  padding: 0;
   min-width: 216px;
+  min-height: 50px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   background-color: var(--accent);
   color: var(--additional-color);
