--- a/css/styles.css
+++ b/css/styles.css
@@ -146,10 +146,24 @@ body {
 /*hero*/
 
 .section-hero {
+  background-color: #c4c4c4;
+  text-align: center;
+}
+
+.container-hero {
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color: #2f303a;
-  text-align: center;
+  max-width: 1600px;
+  height: 600px;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(196, 196, 196, 0.1)
+    ),
+    url(../image/hero-Img.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .hero-title {
@@ -158,7 +172,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 35px;
-  background-color: #2f303a;
   color: var(--additional-color);
   font-weight: 900;
   font-size: 44px;
@@ -197,16 +210,16 @@ body {
   padding-bottom: 94px;
 }
 
-/* .list-decoration::before {
+.list-decoration::before {
   display: block;
   content: "";
   height: 120px;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  background: #F5F4FA;
+  background: #f5f4fa;
   border-radius: 4px;
-} */
+}
 
 .features-list {
   gap: 30px;
