--- a/css/styles.css
+++ b/css/styles.css
@@ -218,22 +218,6 @@ body {
   flex-basis: calc((100% - 90px) / 4);
 }
 
-/* .list-decoration::before {
-  display: block;
-  content: "";
-  height: 120px;
-  margin-bottom: 30px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  background: #f5f4fa;
-  border-radius: 4px;
-}
-
-.list-decoration:nth-child(1)::before {
-  background-image: url(../image/antenna.svg);
-} */
-
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -249,7 +233,7 @@ body {
 }
 
 .featurs-title {
-  margin-top: 0;
+  margin-top: 30px;
   margin-bottom: 10px;
   color: var(--black-title);
   font-weight: 700;
@@ -265,9 +249,21 @@ body {
   line-height: 1.71;
 }
 
+.icons {
+  background: #f5f4fa;
+  border-radius: 4px;
+}
+
+.features-logo {
+  width: 270px;
+  height: 120px;
+  padding: 25px 100px;
+}
+
 /*section-skill*/
 
 .section-skill {
+  padding-top: 94px;
   padding-bottom: 94px;
 }
 
@@ -304,13 +300,13 @@ body {
   text-align: center;
 }
 
-.list-team li {
+.list-team .item-team {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.list-team li:not(:last-child) {
+.list-team .item-team:not(:last-child) {
   margin-right: 30px;
 }
 
@@ -333,11 +329,46 @@ body {
 
 .profession {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 16px;
   color: var(--basic-text);
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
+}
+
+.list-social {
+  margin-left: auto;
+  margin-right: auto;
+  width: 206px;
+  height: 44px;
+}
+
+.list-social .social-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.link-social {
+  display: inline-block;
+  width: 44px;
+  height: 44px;
+  padding: 12px;
+  border-radius: 50%;
+}
+
+.link-social:hover,
+.link-social:focus {
+  fill: var(--additional-color);
+  background-color: var(--accent);
+}
+
+.social-logo {
+ fill: #AFB1B8;
+}
+
+.social-logo:hover,
+.social-logo:focus {
+  fill: var(--additional-color);
+  background-color: var(--accent);
 }
 
 /* section-clients */
