--- a/css/styles.css
+++ b/css/styles.css
@@ -274,8 +274,32 @@ body {
   letter-spacing: 0.06em;
 }
 
-.section-icon li:not(:last-child) {
+.section-icon .skill-icon:not(:last-child) {
   margin-right: 30px;
+}
+
+.skill-icon {
+  position: relative;
+}
+
+.label-container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 370px;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.label {
+  padding: 27px 0;
+  margin: 0;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--additional-color);
 }
 
 /*section-team*/
