--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,21 @@ body {
   text-decoration: none;
 }
 
+.link.current {
+  position: relative;
+}
+
+.link.current::after {
+  position: absolute;
+  bottom: -1px;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent);
+}
+
 .site-nav {
   margin-left: 93px;
 }
@@ -285,7 +300,6 @@ body {
 .label-container {
   position: absolute;
   bottom: 0;
-  left: 0;
   width: 370px;
   height: 70px;
   background-color: rgba(47, 48, 58, 0.8);
@@ -457,6 +471,21 @@ body {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
+/* .container-description {
+  position: absolute;
+  width: 370px;
+  height: 294px;
+}
+
+.description {
+  padding: 63px 24px;
+  margin: 0;
+  font-size: 18px;
+  line-height: 1.56;
+  color: var(--additional-color);
+  background-color: rgba(33, 150, 243, 0.9);
+} */
 
 .filtr-item {
   padding: 20px;
