--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ img {
 }
 
 :root {
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
   --accent: #2196f3;
   --black-title: #212121;
   --basic-text: #757575;
@@ -81,6 +82,7 @@ body {
   line-height: 16px;
   letter-spacing: 0.02em;
   text-decoration: none;
+  transition: 250ms var(--timing-function);
 }
 
 .site-nav .link-nav:hover,
@@ -136,6 +138,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+  transition: 250ms var(--timing-function);
 }
 
 .connect-icon {
@@ -207,6 +210,7 @@ body {
   letter-spacing: 0.06em;
   border-radius: 4px;
   border: none;
+  transition: background-color 250ms var(--timing-function);
 }
 
 .hero-btn:hover,
@@ -388,6 +392,7 @@ body {
   padding: 12px;
   border-radius: 50%;
   fill: #afb1b8;
+  transition: 250ms var(--timing-function);
 }
 
 .link-social:hover,
@@ -427,6 +432,7 @@ body {
   fill: #afb1b8;
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  transition: 250ms var(--timing-function);
 }
 
 .link-clients:hover,
@@ -461,31 +467,35 @@ body {
 }
 
 .link-filtr {
+  position: relative;
   display: block;
   text-decoration: none;
   border: 1px solid #eeeeee;
+  transition: 250ms var(--timing-function);
 }
 
-.link-filtr:hover,
+.link-filtr:hover ,
 .link-filtr:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-/* .container-description {
+.container-description {
   position: absolute;
   width: 370px;
-  height: 294px;
-}
+  height: 294px; 
+  top: 0; 
+  left: 0;
+  opacity: 0;
 
+}
 .description {
   padding: 63px 24px;
   margin: 0;
   font-size: 18px;
   line-height: 1.56;
-  color: var(--additional-color);
-  background-color: rgba(33, 150, 243, 0.9);
-} */
+  color: var(--additional-color); 
+}
 
 .filtr-item {
   padding: 20px;
@@ -525,6 +535,7 @@ body {
   text-align: center;
   cursor: pointer;
   border: none;
+  transition: 250ms var(--timing-function);
 }
 
 .btns:hover,
@@ -580,6 +591,7 @@ body {
   color: var(--additional-color);
   line-height: 1.71;
   text-decoration: none;
+  transition: 250ms var(--timing-function);
 }
 
 .address-list {
@@ -603,6 +615,7 @@ body {
   line-height: 1.71;
   text-decoration: none;
   display: inline-block;
+  transition: 250ms var(--timing-function);
 }
 
 .address-contact:hover,
@@ -636,10 +649,36 @@ body {
   border-radius: 50%;
   fill: var(--additional-color);
   background-color: rgba(255, 255, 255, 0.1);
+  transition: 250ms var(--timing-function);
 }
 
 .footer-link:hover,
 .footer-link:focus {
   fill: var(--additional-color);
   background-color: var(--accent);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 581px;
+  background-color: var(--additional-color);
+  padding: 20px;
 }
