--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ img {
 }
 
 :root {
-  --timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   --accent: #2196f3;
   --black-title: #212121;
   --basic-text: #757575;
@@ -106,7 +106,7 @@ body {
 .link.current::after {
   position: absolute;
   bottom: -1px;
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 4px;
@@ -471,10 +471,10 @@ body {
   display: block;
   text-decoration: none;
   border: 1px solid #eeeeee;
-  transition: 250ms var(--timing-function);
+  transition: transform 250ms var(--timing-function);
 }
 
-.link-filtr:hover ,
+.link-filtr:hover,
 .link-filtr:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -483,18 +483,29 @@ body {
 .container-description {
   position: absolute;
   width: 370px;
-  height: 294px; 
-  top: 0; 
+  height: 294px;
+  top: 0;
   left: 0;
+  transform: translateY(100%);
+  display: flex;
+  align-items: center;
   opacity: 0;
-
+  transition: transform 250ms var(--timing-function);
 }
+
+.link-filtr:hover .container-description {
+  transform: translateY(0);
+  opacity: 1;
+  background-color: rgba(33, 150, 243, 0.9);
+}
+
 .description {
-  padding: 63px 24px;
+  padding-left: 24px;
+  padding-right: 24px;
   margin: 0;
   font-size: 18px;
   line-height: 1.56;
-  color: var(--additional-color); 
+  color: var(--additional-color);
 }
 
 .filtr-item {
@@ -669,6 +680,7 @@ body {
 
 .backdrop.is-hidden {
   opacity: 0;
+  visibility: hidden;
   pointer-events: none;
 }
 
@@ -680,5 +692,23 @@ body {
   width: 528px;
   height: 581px;
   background-color: var(--additional-color);
-  padding: 20px;
+  border-radius: 4px;
+  transition: 250ms var(--timing-function);
+}
+
+.modal-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  fill: #000000;
+  background-color: var(--additional-color);
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
