--- a/css/styles.css
+++ b/css/styles.css
@@ -709,3 +709,14 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
+
+/* Form */
+
+.sign-up {
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  text-transform: uppercase;
+  color: var(--additional-color);
+}
