--- a/css/styles.css
+++ b/css/styles.css
@@ -712,11 +712,11 @@ body {
 
 /* Form */
 
-.sign-up {
+/* .sign-up {
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
   text-transform: uppercase;
   color: var(--additional-color);
-}
+} */
